--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nameofapp</title>
+    <title>Dogma App</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <%= csrf_meta_tags %>
@@ -13,19 +13,59 @@
   </head>
 
   <body>
-  <nav>
-  <ul>
-    <li>Home</li>
-    <li>About</li>
-    <li>Contact</li>
-  </ul>
-</nav>
 
-<%= yield %>
-
-<footer>
-  &copy; 2017 Ashley Betances
-</footer>
+   <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/static_pages/landing_page">bikeffm °</a>
+        </div>
+  
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <%= form_tag("/products", method: "get", class: "navbar-form navbar-left", role: "search") do %>
+            <div class="form-group">
+              <%= label_tag(:q, "Search for:", class: "sr-only") %>
+              <%= text_field_tag(:q, nil, class: "form-control", placeholder: "Search") %>
+            </div>
+            <%= button_tag("Go", class: "btn btn-default btn-default-transparent") %>
+          <% end %>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to('PRODUCTS', products_path) %></li>
+            <li><%= link_to('ABOUT', static_pages_about_path) %></li>
+            <li><%= link_to('CONTACT', static_pages_contact_path) %></li>
+            <li>
+            <% if user_signed_in? %>
+              <%= link_to('LOGOUT', destroy_user_session_path, :method => :delete) %>
+            <% else %>
+              <%= link_to('LOGIN', new_user_session_path) %>
+            <% end %>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav>
+    <% if notice %>
+    <div class="alert alert-info" role="alert">
+      <p id="notice" class="alert alert-info"><%= notice %></p>
+    </div>
+    <% end %>
+    <% if alert %>
+    <div class="alert alert-danger" role="alert">
+      <p id="alert" class="alert alert-info"><%= alert %></p>
+    </div>
+    <% end %>
     <%= yield %>
+    <footer>
+      <h5>&copy; 2017 Dogma</h5>
+    </footer>
   </body>
 </html>
+Contact GitHub API Training Shop Blog About
+
