--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,11 @@
             <%= button_tag("Go", class: "btn btn-default btn-default-transparent") %>
           <% end %>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to('PRODUCTS', products_path) %></li>
+           <li><%#= link_to('PRODUCTS', products_path) %></li>
             <li><%= link_to('ABOUT', static_pages_about_path) %></li>
             <li><%= link_to('CONTACT', static_pages_contact_path) %></li>
             <li>
-            <% if user_signed_in? %>
+            <%# if user_signed_in? #%>
               <%= link_to('LOGOUT', destroy_user_session_path, :method => :delete) %>
             <% else %>
               <%= link_to('LOGIN', new_user_session_path) %>
@@ -67,5 +67,5 @@
     </footer>
   </body>
 </html>
-Contact GitHub API Training Shop Blog About
+
 
