--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,8 +1,6 @@
 
-<%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+/*<%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
