--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome to Dogma Gear</h1>
-<h2>Your source for all dog supplies and designer clothing in New York City </h2>
+<h1>BIKE NYC</h1>
+<h2>Your source for fixed bikes in New York City </h2>
 
-<%= image_tag("teegs.jpeg", class: "img-responsive") %>
+<%= image_tag("Fixie.png", class: "img-responsive") %>
 
