--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         </div>
 
         <div class="projectName navbar-brand">
-          <a href="#">NYC BIKES</a>
+          <a href="#">New York City area</a>
         </div> <!-- end projectName-->
       </div><!-- end navbar-header-->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
