--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,4 @@
-<li><%#= link_to('PRODUCTS', products_path) %></li>
+<h1>Welcome to NYC Bikes</h1>
+<h2>Your source for fixed bikes in Manhattan</h2>
+
+<%= image_tag("Fixie.png", class: "img-responsive main-image", alt: "Black Fixie") %>
