--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Bike Name</th>
       <th>Description</th>
       <th>Image url</th>
       <th colspan="3"></th>
