--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,7 +19,6 @@
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.image_url %></td>
-        <td><%= product.color %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -31,3 +30,18 @@
 <br>
 
 <%= link_to 'New Product', new_product_path %>
+
+<div class="container-fluid">
+  <div class="row">
+    <% @products.each do |product| %>
+      <div class="col-sm-2 col-md-4">
+        <%= product.name %>
+        <%= product.description %>
+        <%= product.image_url %>
+         <%= product.price %>
+      </div><!-- /col -->
+    <% end %>
+  </div>
+</div>
+
+
