--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,47 +1,19 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+      <div class="product-box">
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-       <th>Color</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= image_tag("Bike1.png", class: "img-responsive") %>
 
-  <tbody>
+    <div class="caption">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Product', new_product_path %>
-
-<div class="container-fluid">
-  <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-sm-2 col-md-4">
-        <%= product.name %>
-        <%= product.description %>
-        <%= product.image_url %>
-         <%= product.price %>
+      <h3><%= product.name %></h3>
+      <h4><%= product.description %></h4>
+      <p><%= product.price %></p>        
+      <td><%= link_to 'Show', product, class: "btn btn-success btn-xs btn-clear" %></td>
+          <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-default btn-xs btn-clear" %><td>
+          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs btn-clear" %></td>
+          <% end %>
       </div><!-- /col -->
-    <% end %>
+  
   </div>
 </div>
-
-
