--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,6 +12,8 @@
       <td><%= link_to 'Show', product, class: "btn btn-success btn-xs btn-clear" %></td>
           <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-default btn-xs btn-clear" %><td>
           <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs btn-clear" %></td>
+
+          <%= @test_variable %>
           <% end %>
       </div><!-- /col -->
   
