--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,21 +1,15 @@
 
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-      <div class="product-box">
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<%= image_tag("Bike1.png", class: "img-responsive") %>
+  <h1>Products</h1>
 
-    <div class="caption">
-    <% @products.each do |product| %>
-      <h3><%= product.name %></h3>
-      <h4><%= product.description %></h4>
-      <p><%= product.price %></p>        
-      <td><%= link_to 'Show', product, class: "btn btn-success btn-xs btn-clear" %></td>
-          <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-default btn-xs btn-clear" %><td>
-          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs btn-clear" %></td>
-
-          <%= @test_variable %>
-          <% end %>
-      </div><!-- /col -->
-  
+  <div class="row">
+    <%= will_paginate @products %>
   </div>
-</div>
+
+  <%= render @products %>
+
+  <%= link_to 'New Product', new_product_path %> 
+</div><!-- /container -->
+<br>
