--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,22 @@
-<h1>BIKE NYC</h1>
-<h2>Your source for fixed bikes in New York City </h2>
+<h1>Products</h1>
 
-<%= image_tag("Fixie.png", class: "img-responsive") %>
+<div class="product-search">
+  <%= form_tag("/products", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
+</div>
 
+<div class="row product-row">
+	<% cache cache_key_for_products do %>
+	  <%= render @products %>
+	<% end %>
+</div>
+
+
+<br>
+
+<% if signed_in? && current_user.admin? %>
+  <%= link_to 'New Product', new_product_path %>
+<% end %>
