--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *
 /*navbar*/
 
+.btn {
+  color: black;
+}
+
  .centre-text{
  	text-align: center;
  }
@@ -32,6 +36,7 @@
 
 #nav_login_btn {
   margin: 8px 10px 0 1px;
+
 }
 
 /*navbar collapse breakpoint when the browser is below 1030px*/
