--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,11 @@
 
   <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+    <nav class="navbar navbar-inverse navbar-fixed-top" roles="navigation">
+      <div class="container-fluid" id="nav_container">
+        <div class="navbar-brand">
           <%= link_to "Bike NYC", static_pages_index_path, :class => "navbar-brand" %>
-          <button type="button" class="navbar-toggle collapsed"
-            data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -30,16 +28,16 @@
           </button>
         </div>
 
-        <div class="projectName navbar-brand">
-          <a href="#">New York City area</a>
-        </div> <!-- end projectName-->
-      </div><!-- end navbar-header-->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right" id="navbar-right">
-        <nav class="nav nav-inline">
-          <ul class="list-inline">
+      <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <%= form_tag("/products", method: "get", class:"navbar-form navbar-left", role:"search") do %>
+                  <%= content_tag(:div, nil, class: "form-group") do %>
+                    <%= text_field_tag(:q, "", class:"form-control", placeholder:"Search Products", id:"search_field") %>
+                      <%= submit_tag("Go", class:"btn btn-default") %>
+                  <% end %>
+                <% end %>
             <li><%= link_to "Home", root_path %></li>
-            <%= link_to "About", static_pages_about_path %></li>
+            <li><%= link_to "About", static_pages_about_path %></li>
             <li><%= link_to "Store",  products_path %></li>
             <li><%= link_to "Contact", static_pages_contact_path %></li>
           </ul>
@@ -47,7 +45,6 @@
       </div><!--end collapse navbar-->
      </div><!-- end container fluid -->
    </nav>
-
 
     <%= yield %>
 
