--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,20 @@
+<p id="notice"><%= notice %></p>
 
-<div class="container">
-  <p id="notice"><%= notice %></p>
+<h1>Products</h1>
 
-  <h1>Products</h1>
+  <div class="row products-row">
 
-  <div class="row">
-    <%= will_paginate @products %>
+
+      <%# cache cache_key_for_products do %>
+
+        <%= render @products %>
+
+   
+
+      <%# end %>
+
+
   </div>
 
-  <%= render @products %>
+  <%= link_to 'New Product', new_product_path, :class => 'btn btn-default' %>
 
-  <%= link_to 'New Product', new_product_path %> 
-</div><!-- /container -->
-<br>
