--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" roles="navigation">
       <div class="container-fluid" id="nav_container">
         <div class="navbar-brand">
-          <%= link_to "Bike NYC", static_pages_index_path, :class => "navbar-brand" %>
+          <%= link_to "Bike NYC", static_pages_landing_page_path, :class => "navbar-brand" %>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
