adding comment flag

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,6 +15,7 @@
   <%= @product.image_url %>
 </p>
 
+<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
 
 
 
