added Dalli gem and Memcached

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-
+<% cache product do %>
 <div class="col-sm-6 col-md-4">
 
   <div class="thumbnail">
@@ -14,3 +14,5 @@
 
   </div><!-- thumbnail -->
 </div><!-- /col -->
+
+<% end %>
