--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,9 +6,9 @@
 
 
       <%# cache cache_key_for_products do %>
-
-        <%= render @products %>
-
+<% cache @products do %>
+    <%= render @products %>
+<% end %>
    
 
       <%# end %>
