--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,7 +20,7 @@
 
 <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
 
-
+<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
 
 <%= form_tag "/payments/create" do %>
   <%= render partial: "shared/stripe_checkout_button" %>
