--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Roboto Condensed', arial, helvetica, sans-serif;
+  font-size: 1.2em;
+  line-height: 18px;
+  margin: 33px;
+}
 
 .img-box {
     position: relative;
