--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,73 +2,384 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-h1 {
-  color: red;
-  font-weight: bold;
+* {
+    box-sizing: border-box
 }
-#nav_container, 
-.navbar-inverse  .navbar-collapse, 
-.navbar-inverse .navbar-form {
-    background-color: #cc0c0c;
- }
-
- .navbar-inverse .navbar-nav>li>a {
-    color: #ffffff;
+body,
+html {
+    height: 100%
 }
-
- .navbar-brand a{
-  text-transform: uppercase;
-  color: white;
- }
-
-.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover {
-    color: #d01717;
-    background-color: white;
+body {
+    font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+    padding: 0;
+    margin: 0;
+    padding-top: 79px;
+    position: relative;
 }
-
- body {
-  padding-top: 40px;
- }
-
-
+.container {
+    width: 80%;
+    margin: none;
+    padding: 8em 0
+}
+.container-fluid {
+    width: 80%;
+    margin: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
+    margin-bottom: 0
+}
 h2 {
-  text-align: Center;
-  padding: 5px 5px 5px 15px;
-  font-size: 30px;
-  margin: -7px;
-  margin-bottom: 0;
-  color: red;
-}
-
-#featured_product_display {
-  padding: 0 24%;
-}
-
-#featured_product_display h2 {
+    font-size: 3em;
+    font-weight: 700;
+    padding-bottom: 1em;
     text-align: center;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 30px;
-    margin: 20px;
-    margin-bottom: 0;
-    background-color: rgba(255, 0, 0, 0.31);
-    color: white;
+}
+h3 {
+    font-size: 2em;
+    font-weight: 200;
+    text-transform: uppercase;
+    text-align: center;
+    padding-bottom: 1em
+}
+h4 {
+    font-size: 1em;
+    font-weight: 700;
+    line-height: 30px;
+    padding: 1em 0
+}
+p {
+    font-size: 1.5em;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    line-height: 30px;
+    padding: 0.5em 0;
+    text-align: center
+}
+a:visited {
+    color: #000;
+}
+form {
+    padding-top: 10px;
+    padding-bottom: 15px;
+}
+.nav {
+    color: #000;
+    font-weight: 300;
+    font-size: 1.5em;
+}
+.navbar {
+    background-color: #fff;
+    padding: 10px;
+    z-index: 999;
+    border: none;
+    margin-bottom: 0
+}
+.navbar a:hover {
+    color: #B40431
+}
+.navbar-inverse .navbar-nav>li>a {
+    color: #000;
+}
+.navbar-inverse .navbar-nav>li>a:hover {
+    color: #B40431
+}
+.navbar-inverse .navbar-nav>li>a:focus {
+    color: #B40431;
+    font-weight: 700;
+    background-color: transparent
+}
+.navbar-inverse .navbar-nav>.active>a,
+.navbar-inverse .navbar-nav>.active>a:focus,
+.navbar-inverse .navbar-nav>.active>a:hover {
+    color: #B40431;
+}
+.navbar-inverse .navbar-toggle .icon-bar {
+    border: 0;
+}
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: #000;
+}
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover {
+    background-color: #B40431;
+    color: #fff
+}
+.navbar-toggle {
+    border: 0;
+    background-color: #fff
+}
+.navbar-toggle:focus,
+.navbar-toggle:hover {
+    color: #fff;
+    border-radius: 2px
+}
+.navbar-brand {
+    padding-top: 10px
+}
+.main-title a,
+.main-title a:active,
+.main-title a:focus,
+.main-title a:hover {
+    text-decoration: none;
+    background-color: #fff;
+    font-weight: 800;
+    font-size: 2em;
+    font-family: 'Open Sans', sans-serif;
+}
+h1 {
+    font-weight: 700;
+    font-size: 3em;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+}
+.pad-top {
+    padding-top: 4em
+}
+.pad-bottom {
+    padding-bottom: 4em
+}
+.pad-top-double {
+    padding-top: 8em
+}
+.pad-bottom-double {
+    padding-bottom: 8em
+}
+.pad-bottom-extra {
+    padding-bottom: 28em
+}
+.my-image {
+    display: block;
+    margin: auto;
+    max-width: 200px;
+    position: relative
+}
+.footer {
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+
+    height: 60px;
+    background-color: #f5f5f5;
+}
+.text-muted {
+    margin: 0 0 0 20px;
+}
+a:visited {
+    color: #000;
+}
+a:hover {
+    background-color: #fff;
+}
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
+.carousel {
+    margin-left: -15px;
+    margin-right: -15px;
+    height: 100%;
+    position: relative
+}
+.inner-item {
+    text-align: center;
+    img {
+        margin: 0 auto;
+    }
+}
+.active,
+.carousel,
+.item {
+    height: 80%
+}
+.carousel-inner {
+    margin: 0 auto;
+    height: 100%;
+    background-size: cover;
+    position: relative
+}
+.fill {
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat
+}
+
+.overlay {
     position: absolute;
-    top: 17pc;
-    right: 45pc;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: #fff;
 }
-
-#featured_caption {
-  background-color: red;
-  color: white;
-}
-#product_carousel {
-    width: 60pc;
-    padding: 0px 0pc;
- }
-
 .carousel-caption {
-
-    bottom: 30px;
-    
+    font-family: 'Raleway', sans-serif;
+    color: #000;
+    text-decoration: none;
+    text-shadow: none;
+    position: absolute;
+    top: 50%;
+    text-align: center;
+    max-width: 100%;
+    margin: 0 auto;
+    left: 10%;
+    right: 10%
+}
+.carousel-caption h3 {
+    font-size: 2.5em;
+    font-weight: 300;
+}
+.carousel-control.left,
+.carousel-control.right {
+    background-image: none;
+    width: 10%;
+    text-decoration: none;
+    text-shadow: none;
+    z-index: 3;
+    color: #B40431
+}
+.carousel-control:focus,
+.carousel-control:hover {
+    opacity: .9
+}
+.carousel-indicators li {
+    border: 1px solid #B40431
+}
+.carousel-indicators .active {
+    background-color: #B40431
+}
+.color-bg {
+    background-color: #F7F7F7
+}
+.contact {
+    background: linear-gradient(rgba(255, 255, 255, .7), rgba(255, 255, 255, .7));
+    background-attachment: fixed;
+    background-size: cover;
+    color: #000;
+    height: auto;
+    position: relative;
+    background-repeat: no-repeat
+}
+.form-control {
+    width: 100%;
+    background-color: rgba(255, 255, 255, .3);
+    border: 1px dashed #000;
+    border-radius: 0;
+    box-shadow: none
+}
+.form-group {
+    font-size: 1.6em;
+    padding-top: 1em
+}
+.form-group label {
+    font-weight: 300
+}
+#visible-comment {
+    font-size: 1.6em;
+    font-weight: 700;
+    padding: 0;
+    margin: 0
+}
+#char-count {
+    font-size: 1.2em;
+    font-weight: 300;
+    text-align: left;
+    padding: 20px 0;
+    margin: 0
+}
+@media (min-width: 768px) and (max-width: 979px) {
+    body,
+    h2,
+    p {
+        text-align: center
+    }
+    .header-caption {
+        top: 30%
+    }
+    .carousel-indicators {
+        top: 50%
+    }
+    .carousel-caption {
+        top: 40%
+    }
+    .inner-item img {
+        max-width: 150px;
+    }
+}
+@media (max-width: 767px) {
+    body,
+    h2,
+    h3,
+    p {
+        text-align: center
+    }
+    h1 {
+        padding-top: 20px
+    }
+    .container {
+        width: 80%
+    }
+    #contact {
+        padding-right: 10%;
+        padding-left: 10%
+    }
+    .header-caption {
+        top: 30%;
+        font-size: 62.5%
+    }
+    .inner-item img {
+        max-width: 150px;
+    }
+    .carousel-caption {
+        top: 30%;
+    }
+}
+@media (max-width: 480px) {
+    body,
+    h2,
+    h3,
+    p {
+        text-align: center
+    }
+    .container {
+        width: 90%
+    }
+    #contact {
+        padding-right: 5%;
+        padding-left: 5%
+    }
+    .header-caption {
+        top: 30%
+    }
+    .header-caption h2 {
+        font-weight: 800;
+        text-transform: uppercase
+    }
+    .carousel-caption {
+        top: 60%;
+    }
+    .about {
+        text-align: center;
+    }
+    #copywright {
+        width: 100%;
+        text-align: center
+    }
+    #fb-button {
+        width: 50%;
+        float: left
+    }
+    #twitter-button {
+        ;
+        float: right;
+        width: 50%;
+    }
+    .inner-item img {
+        width: 80%;
+    }
 }
