--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,11 @@
-<h1>About us</h1>
-<p>We stock the best looking fixies in town.</p>
+
+<div class="pad-top">
+	<%# cache do %>
+	  <%# sleep 2 %>
+		<h3>Who Are We? </h3>
+	<%# end %>
+</div>
+<div class="pad-bottom-extra pad-bottom-double">
+
+<p>Bike NYC promotes and encourages bicycling in Manhattan through, selling the finest bicycles and equipment available.</p>
+</div>
