--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,12 @@
 
   <body>
 
-         <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-
-
+  <!--  start of navigation bar-->
 
     <nav class="navbar navbar-inverse navbar-fixed-top" roles="navigation">
       <div class="container-fluid" id="nav_container">
         <div class="navbar-brand">
-          <%= link_to "Bike NYC", static_pages_landing_page_path, :class => "navbar-brand" %>
+          <%= link_to "Bike NYC", root_path, :class => "navbar-brand" %>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -43,8 +40,24 @@
                 <% end %>
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "About", static_pages_about_path %></li>
-            <li><%= link_to "Store",  products_path %></li>
+            <li><%= link_to "Products",  products_path %></li>
             <li><%= link_to "Contact", static_pages_contact_path %></li>
+             <li>
+            <% if user_signed_in? %>
+              <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+            <% else %>
+              <%= link_to('Login', new_user_session_path) %>
+            <% end %>
+            </li>
+
+        <% if notice %>
+        <p id="notice" class="notice alert alert-info"><%= notice %></p>
+        <% end %>
+
+        <% if alert %>
+        <p id="alert" class="alert alert-info"><%= alert %></p>
+        <% end %>
+
           </ul>
          </nav><!-- end of nav-->
       </div><!--end collapse navbar-->
@@ -53,8 +66,10 @@
 
     <%= yield %>
 
-    <footer>
-  &copy; BIKE NYC
-</footer>
+  <footer class="footer">
+      <div>
+        <p class="text-muted">&copy; 2017 Bike NYC</p>
+      </div>
+    </footer>
   </body>
 </html>
