--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,7 +5,7 @@
   <%= image_tag(product.image_url, class: "img-responsive") %>
   <h1><%= product.name %></h1>
   <p><%= product.description %></p>
-  <p><%= product.colour %></p>
+  <p><%= product.color %></p>
   <strong>$<%= product.price %></strong><br>
   <td><%= link_to 'Show', product %></td>
   <td><%= link_to 'Edit', edit_product_path(product) %></td>
