--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,10 +2,10 @@
 <div class="pad-top">
 	<%# cache do %>
 	  <%# sleep 2 %>
-		<h3>Who Are We? </h3>
+		<p><h3>Who Are We? </h3><p>
 	<%# end %>
 </div>
 <div class="pad-bottom-extra pad-bottom-double">
 
-<p>Bike NYC promotes and encourages bicycling in Manhattan through, selling the finest bicycles and equipment available.</p>
+<p>Bike NYC promotes and encourages fixed gear bike riding in Manhattan.</p>
 </div>
