--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,5 @@
-<p><h1>Contact Us</h1><p><h3>Drop us a line...</h3>
+<p><h1>Contact Us</h1><p>
+<h3>Drop us a line...</h3>
 
 <%= flash[:notice] %>
 
