--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,46 +16,48 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top" roles="navigation">
       <div class="container-fluid" id="nav_container">
-        <div class="navbar-brand">
-          <%= link_to "Bike NYC", root_path, :class => "navbar-brand" %>
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
+      <div class="navbar-brand">
+      <%= link_to "Bike NYC", root_path, :class => "navbar-brand" %>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      </button>
+      </div>
+      </div>
 
       <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav navbar-right">
-                <%= form_tag("/products", method: "get", class:"navbar-form navbar-left", role:"search") do %>
-                  <%= content_tag(:div, nil, class: "form-group") do %>
-                    <%= text_field_tag(:q, "", class:"form-control", placeholder:"Search Products", id:"search_field") %>
-                      <%= submit_tag("Go", class:"btn btn-default") %>
-                  <% end %>
-                <% end %>
-            <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "About", static_pages_about_path %></li>
-            <li><%= link_to "Products",  products_path %></li>
-            <li><%= link_to "Contact", static_pages_contact_path %></li>
-             <li>
-            <% if user_signed_in? %>
-              <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-            <% else %>
-              <%= link_to('Login', new_user_session_path) %>
-            <% end %>
-            </li>
+      <ul class="nav navbar-nav navbar-right">
+      <%= form_tag("/products", method: "get", class:"navbar-form navbar-left", role:"search") do %>
+      <%= content_tag(:div, nil, class: "form-group") do %>
+      <%= text_field_tag(:q, "", class:"form-control", placeholder:"Search Products", id:"search_field") %>
+      <%= submit_tag("Go", class:"btn btn-default") %>
+      <% end %>
+      <% end %>
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "About", static_pages_about_path %></li>
+      <li><%= link_to "Products",  static_pages_product_path %></li>
+      <li><%= link_to "Contact", static_pages_contact_path %></li>
+      
+      <li>
+      <% if user_signed_in? %>
+      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+      <% else %>
+      <%= link_to('Login', new_user_session_path) %>
+      <% end %>
+      </li>
 
-        <% if notice %>
-        <p id="notice" class="notice alert alert-info"><%= notice %></p>
-        <% end %>
+      <% if notice %>
+      <p id="notice" class="notice alert alert-info"><%= notice %></p>
+      <% end %>
 
-        <% if alert %>
-        <p id="alert" class="alert alert-info"><%= alert %></p>
-        <% end %>
+      <% if alert %>
+      <p id="alert" class="alert alert-info"><%= alert %></p>
+      <% end %>
 
-          </ul>
-         </nav><!-- end of nav-->
+      </ul>
+      </nav><!-- end of nav-->
       </div><!--end collapse navbar-->
      </div><!-- end container fluid -->
    </nav>
