--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       <% end %>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", static_pages_about_path %></li>
-      <li><%= link_to "Products",  static_pages_product_path %></li>
+      <li><%= link_to "Products", product_path %></li>
       <li><%= link_to "Contact", static_pages_contact_path %></li>
       
       <li>
