--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,20 +1,11 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <h1>Bicycles</h1>
+  <%= link_to 'New Product', new_product_path, class:"btn newprodbut btn-default", type:"button" %>
+</div>
 
-<h1>Products</h1>
-
-  <div class="row products-row">
-
-
-      <%# cache cache_key_for_products do %>
-<% cache @products do %>
+<div class="row">
+  <% cache @products do %>    
     <%= render @products %>
-<% end %>
-   
-
-      <%# end %>
-
-
-  </div>
-
-  <%= link_to 'New Product', new_product_path, :class => 'btn btn-default' %>
+  <% end %>    
+</div>
 
