CSS navbar fix and product button fix

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto Condensed', arial, helvetica, sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 1.2em;
   line-height: 18px;
   margin: 33px;
@@ -36,10 +36,12 @@ body {
     color: #fff;
     background-color: #6C464F;
     border-color: #B3CDD1;
+    position: center;
 }
 
 .btn-color-change:hover {
     color: #fff;
     background-color: #9E768F;
     border-color: #B3CDD1;
+    position: center;
 }
