--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,41 +1,38 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Product Overview:</strong>
+<p><strong>Product Overview:</strong>
   <%= @product.name %>
 </p>
 
- <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") %>
+ <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: @product.image_url") %>
 
 
-<p>
-  <strong>Description:</strong>
+<p><strong>Description:</strong>
   <%= @product.description %>
 </p>
 
-<p>
-  <strong>Image url:</strong>
+<p><strong>Image url:</strong>
   <%= @product.image_url %>
 </p>
 
 <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div>
   <p class="">
-            <% if signed_in? && current_user.admin? %>
-           <%= link_to 'Edit', edit_product_path(@product) %>
-            <% end %>
-            <%= link_to 'Back', products_path, class:'btn btn-default'%>
-            </p>
+  <% if signed_in? && current_user.admin? %>
+  <%= link_to 'Edit', edit_product_path(@product) %>
+  <% end %>
+  <%= link_to 'Back', products_path, class:'btn btn-default'%>
+  </p>
 
 
 
 <div class="col-lg-12 col-md-12 col-sm-12 pad-bottom pad-top">
-              <%= render 'new_comment', product: @product %>
-          </div>
-          <div class="pagination">
-              <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
-              <%= render 'comments', product: @product %>
-              <%= will_paginate @comments, :page_links => false %>
-          </div>
+  <%= render 'new_comment', product: @product %>
+  </div>
+<div class="pagination">
+<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+  <%= render 'comments', product: @product %>
+  <%= will_paginate @comments, :page_links => false %>
+  </div>
 
 <%= form_tag "/payments/create" do %>
   <%= render partial: "shared/stripe_checkout_button" %>
