--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,18 +1,16 @@
-
-<% if signed_in? %>
-  <h4>Add a review:</h4>
-  <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
-    <p>
-      <%= f.label :body, "Comments" %><br>
-      <%= f.text_area :body %>
-    </p>
-
-    <p>
+<div>
+  <% if signed_in? %>
+    <h2>Add a review:</h2>
+    <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
+  <div class="form-group pad-bottom">
+    <%= f.text_area :body, class: 'form-control', placeholder: 'Enter comment here' %>
+  </div>
+   <div>
     <div class="rating"></div>
-    </p>
-  
-    <p>
-      <%= f.submit "Submit" %>
-    </p>
+  </div>
+    <div class="pad-top">
+      <%= f.submit "Submit", class: 'btn btn-default' %>
+    </div>
+    <% end %>
   <% end %>
-<% end %>
+</div>
