--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,6 @@
+
+<p id="notice"><%= notice %></p>
+
 <div class="container pad-top pad-bottom" >
   <% cache @product do %>
     <h2 class="text-center"><%= @product.name %>
@@ -18,9 +21,10 @@
           <div class="col-lg-6 col-md-12 col-sm-12 pad-top">
             <h3 class=""><strong>Description: </strong><%= @product.description %>
             </h3>
+          
             <h3 name="price_in_cents" class="">
 
-              <strong>Price: </strong><%= number_to_currency@product.price %> 
+              <strong>Price: </strong>
             </h3>
             <p>
 
@@ -52,3 +56,4 @@
 
       </div>
 </div>
+
