--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -15,6 +15,11 @@ body {
     background-size:     cover;
     display: block;
 
+img {
+display: block;
+margin: auto;
+}
+
 .img {
 display: block;
 margin: auto;
