--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,10 +1,4 @@
-<h1>New Product</h1>
-
-<div class="container product-form">
-
-<%= render 'form', product: @product %>
-
-<%= link_to 'Back', products_path %>
+<div class="pad-top-double">
+	<h1>New Product</h1>
 </div>
-
-
+ <%= render 'form', product: @product %>
