--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,7 @@
             
             <h3 name="price_in_cents" class="">
 
-              <strong>Price: </strong><%= number_to_currency@product.price * 0.01%> 
+              <strong>Price: </strong>
             </h3>
             <p>
 
