--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,37 +1,39 @@
+<div class="field form-group pad-top">
 
 <%= form_for(@product) do |f| %>
-  <% if @product.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
-  <ul><% @product.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-  <% end %>
-  </ul>
- </div>
-  <% end %>
+    <% if @product.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-    <div class="field">
-      <%= f.label :name %><br>
-      <%= f.text_field :name %>
+          <ul>
+            <% @product.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="form-group field">
+      <%= f.text_field :name, class: "form-control", placeholder: "name"  %>
     </div>
-    <div class="field">
-      <%= f.label :description %><br>
-      <%= f.text_area :description %>
+    <div class="form-group field">
+      <%= f.text_area :description, class: "form-control", placeholder: "description"  %>
     </div>
-    <div class="field">
-      <%= f.label :image_url %><br>
-      <%= f.text_field :image_url %>
+    <div class="form-group field">
+      <%= f.text_field :image_url, class: "form-control", placeholder: "image_url" %>
     </div>
-    <div class="field">
-      <%= f.label :color %><br>
-      <%= f.text_field :color %>
+    <div class="form-group form field">
+      <%= f.text_field :colour, class: "form-control", placeholder: "color" %>
     </div>
-    <div class="field">
-      <%= f.label :price %><br>
-      <%= f.text_field :price %>
+    <div class="form-group form field">
+      <%= f.text_field :price, class: "form-control", placeholder: "price" %>
     </div>
-    <div class="actions">
-      <%= f.submit %>
+    <div class: "btn btn-primary btn-block">
+      <%= f.submit "Create product", class: "btn btn-primary btn-block", type: "submit" %>
     </div>
 
 <% end %>
+
+
+  <%= link_to 'Back', products_path %>
+    </div>
