product path fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li class="">
-            <%= link_to "Products", static_pages_products_path %>
+            <%= link_to "Products", products_path %>
           </li>
           <li class="">
             <%= link_to "About", static_pages_about_path %>
