footer name change

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
     <%= yield %>
     <footer class="footer">
       <div>
-        <p class="text-muted">&copy; 2017 Bike NYC</p>
+        <p class="text-muted">&copy; 2017 Gearhead Social Club</p>
       </div>
     </footer>
 
