--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,4 +1,5 @@
 
+<p><h1>New York City's Premiere Fixed Gear Shop!</h1>
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 	  <!-- Indicators -->
