--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,5 +1,5 @@
 
-<p><h1>New York City's Premiere Fixed Gear Shop!</h1></p>
+<p><h1>New York City's Premiere Fixed Gear Shop</h1></p>
 
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
