--- a/app/views/static_pages/homepage.html.erb
+++ b/app/views/static_pages/homepage.html.erb
@@ -11,11 +11,11 @@
     </tr>
   </thead%>
  <div class="pad-top-double color-bg">
-	<h1>Welcome to Fahrradkit</h1>
+	<h1>Welcome to Gearhead Social Club</h1>
 </div>
 
 <div class="pad-top color-bg">
-	<h3>Just for bike freaks</h3>
+	<h3>For Fixed Gearheads only!</h3>
 </div>
 <div class="pad-bottom color-bg">
 
