--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,4 @@
 <br></br>
-<h1>NYC Bikes</h1>
-<h2>Your source for fixie bikes in NYC</h2>
-<h3> Top Seller This Week</h3>
+<h1>New York City's Premiere Fixed Gear Shop!</h1>
+<h2> Top Seller This Week</h2>
 <%= image_tag("Bike1.png", class: "img-responsive") %>
