--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,5 +7,5 @@
 </div>
 <div class="pad-bottom-extra pad-bottom-double">
 
-<p>Bike NYC promotes and encourages fixed gear bike riding in Manhattan.</p>
+<p>Gearhead Social Club promotes and encourages fixed gear bike riding in Manhattan.</p>
 </div>
