center product button

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -45,6 +45,9 @@ margin: auto;
     border-color: #B3CDD1;
     position: center;
 }
+.btn-default {
+    position: center;
+}
 
 .btn-color-change:hover {
     color: #fff;
