boostrapg, validation added to contact form

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -32,8 +32,8 @@
     <%= f.text_field :price, class: "form-control", placeholder: "price" %>
   </div>
       
-  <div class: "btn btn-primary btn-block">
-    <%= f.submit "Create product", class: "btn btn-primary btn-block", type: "submit" %>
+  <div class= "btn btn-primary">
+    <%= f.submit "Create product", class: "btn btn-primary", type: "submit" %>
   </div>
   <% end %>
   <%= link_to 'Back', products_path %>
