--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -1,7 +1,7 @@
 <script
   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-  data-image="/square-image.png"
+  data-image="/Bike2.png"
   data-name="Bike NYC"
   data-description="2 widgets ($20.00)"
   data-amount="2000">
