--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -32,7 +32,7 @@
     <%= f.text_field :price, class: "form-control", placeholder: "price" %>
   </div>
       
-  <div class= "btn btn-primary">
+  <div class= "actions">
     <%= f.submit "Create product", class: "btn btn-primary", type: "submit" %>
   </div>
   <% end %>
