--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,58 +1,44 @@
-<div class="container">
-  <p id="notice"><%= notice %></p>
-  <% cache @product do %>
-    <h1>
-      <%= @product.name %>
-    </h1>     
-<p><strong>Views:</strong><%= @product.views %></p>
-
-<div class="container">
-  <p id="notice"><%= notice %></p>
-  <% cache @product do %>
-    <h1>
-      <%= @product.name %>
-    </h1>
-
-<div class="row">
-  <div class="col-md-4">
-    <h3>Description:</h3>
-      <p><%= @product.description %></p>
-    
-    <h4>Price:</h4>
-      <p><%= @product.price %></p>
-    
-    <h4>Ratings:</h4>
-      <% if @product.comments.exists? %>
-        <p>Average Rating: <div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></div> </p>
-      <% else %>
-        <p>No ratings yet, be the first to review this product!</p>
-      <% end %>
-    
-    <h4>Buy</h4>
-    <%= form_tag "/payments/create" do %>
-        <%= render partial: "shared/stripe_checkout_button" %>
-        <%= hidden_field_tag(:product_id, @product.id) %>
-        <%end %>
-  </div>
+<div class="container product-show-wrapper">
+  <div class="row" data-product-id="<%= @product.id %>">
+    <% if user_signed_in? && current_user.admin? %>
+      <div class="col-xs-12">
+        <%= link_to 'Edit', edit_product_path(@product) %> |
+        <%= link_to 'Back', products_path %> |
+        <%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
     <% end %>
-
-    
-
-  <div class="col-md-8" id="show-product">
-    <%= image_tag(@product.image_url, class:'img-responsive img-zoom', data_zoom_image:"@product.image_url") %>
+    <div class="col-xs-12 col-sm-8 product-box">
+      <p>
+        Views: <%= @product.views %>
+      </p>
+      <% cache @product do %>
+        <p class="product-name">
+          <%= @product.name %>
+        </p>
+        
+        <p class="product-description">
+          <%= @product.description %>
+        </p>
+        <p class="product-price col-xs-12">
+          <%= @product.price %> €
+        </p>
+        <p>Average Rating: <div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+        
+        <%= form_tag "../payments/create" do %>
+          <%= hidden_field_tag(:product_id, @product.id) %>        
+          <%= render partial: "shared/stripe_checkout_button" %>
+        <% end %>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <p class="product-image">
+          <%= image_tag(@product.image_url, class: "img-responsive image-zoom", data_zoom_image: @product.image_url) %>
+        </p>
+        <% end %>
+    </div>
+  
   </div>
-</div> <!--end row-->
-
-
+  <%= render "new_comment" %>
   <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
-    <%= render "new_comment" %>
-    <%= render "comments" %>
-
-  <div class="btn-wrapper">
-    <%= link_to 'Edit', edit_product_path(@product), class:'btn btn-primary' %> |
-    <%= link_to 'Back', products_path, class:'btn btn-primary' %>
-  </div>
-
+  <%= render "comments" %>
+  
 </div>
-</div>
-!--end container-->
