commenting out errors

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,6 @@
-<p><strong>Views:</strong><%= @product.views %></p>
+<!--This code is throwing an error
+
+<p><strong>Views:</strong><%= @product.views %></p> -->
 
 <div class="container">
   <p id="notice"><%= notice %></p>
