--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,6 +28,7 @@
         <%= render partial: "shared/stripe_checkout_button" %>
         <% hidden_field_tag(:product_id, @product.id) %> 
         <% end %>
+    </div>
   </div>
     <% end %>
 
@@ -39,7 +40,8 @@
 </div> <!--end row-->
 
 
-  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!
+  </div>
     <%= render "new_comment" %>
     <%= render "comments" %>
 
