removing div closing tag

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -40,8 +40,7 @@
 </div> <!--end row-->
 
 
-  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!
-  </div>
+  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
     <%= render "new_comment" %>
     <%= render "comments" %>
 
@@ -49,5 +48,3 @@
     <%= link_to 'Edit', edit_product_path(@product), class:'btn btn-primary' %> |
     <%= link_to 'Back', products_path, class:'btn btn-primary' %>
   </div>
-
-</div>
