fixing carousel indicators

--- a/app/views/static_pages/homepage.html.erb
+++ b/app/views/static_pages/homepage.html.erb
@@ -1,5 +1,5 @@
 
-<table>
+<!--<table>
   <%#thead>
     <tr>
       <th>Name</th>
@@ -19,12 +19,12 @@
 </div>
 <div class="pad-bottom color-bg">
 
-<%= image_tag("bike_logo_transparent.png", class: "img-responsive my-image") %>
+<%= image_tag(#{}"bike_logo_transparent.png", class: "img-responsive my-image") %>
 </div>
 
-<!-- Wrapper for slides -->
+<! Wrapper for slides 
 
-<%= render partial: 'carousel' %>
+<%= #render partial: 'carousel' %>
 
 
-</table>
+</table>-->
