--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,8 +1,21 @@
-<div class="pad-top">
+<table>
+
+ <div class="pad-top color-bg">
 	<h3>Welcome to Gearhead Social</h3>
 </div>
-<%#p>Welcome! The date and time is <%= Time.now %></p>
+<%#p>Welcome! The date and time is <%= Time.now %>
+
+<div class="pad-top color-bg">
+	<h3>For fixed gear lovers</h3>
+</div>
+<div class="pad-bottom color-bg">
 <%= image_tag("bikelogo.png", class: "img-responsive my-image") %>
+</div>
+
+<%= render partial: 'carousel' %>
+
+
+</table>
 <%# test_variable = 42 %>
 <%#= test_variable %>
 <%#= test_variable - 2 %>
